--- a/_thesis-2014.tex
+++ b/_thesis-2014.tex
@@ -14,7 +14,7 @@
 \author{Felix Hessenberger}
 \studiengang{Interactive Media}
 \studienort{Hagenberg}
-\abgabedatum{2014}{06}{30} 
+\abgabedatum{2014}{09}{19} 
 
 \frontmatter
 \maketitle
@@ -39,6 +39,8 @@
 \include{60_conclusion}
  
 \appendix
+
+\include{90_appendix}
 
 \MakeBibliography{References}
 
