--- a/01_kurzfassung.tex
+++ b/01_kurzfassung.tex
@@ -1,2 +1,2 @@
 \chapter{Kurzfassung}
-Im Laufe der letzten Jahre haben sich Websites ver{\"a}ndert: Fr{\"u}her dienten sie lediglich zur Anzeige von Inhalten, nun verk{\"o}rpern sie Benutzeroberfl{\"a}chen f{\"u}r dynamische serverseitige Anwendungen verschiedener Gr{\"o}{\ss}enordnungen; andere Endger{\"a}te wie Mobiltelefone verwenden nicht selten die selben HTTP-Schnittstellen. Um die Kosten f{\"u}r Serverhardware einzud{\"a}mmen, gibt es verschiedene Ans{\"a}tze, die versuchen, die Anzahl der gleichzeitigen Operationen zu maximieren. Dies kann geschehen, indem von dem klassischen Ein-Thread-Pro-Request-Modell zu ausgefeilteren Varianten der Parallelit{\"a}t gewechselt wird. Diese Arbeit pr{\"a}sentiert und vergleicht mehrere Ans{\"a}tze der serverseitigen Nichtsequentialit{\"a}t aus der Sicht eines Entwicklers. Typische Anwendungsf{\"a}lle f{\"u}r serverseitigen Informationsfluss werden aufgezeigt und mit Hinblick auf asynchrone Operationen ausgewertet. Die Ans{\"a}tze werden anschlie{\ss}end basierend auf ihrer Leistung in skalierbaren Hochleistungsnetzwerksystemen und anhand des Beispiels von realen und experimentellen Anwendungen betrachtet.
+Im Laufe der letzten Jahre haben sich Websites ver{\"a}ndert: Fr{\"u}her dienten sie lediglich zur Anzeige von Inhalten, nun verk{\"o}rpern sie Benutzeroberfl{\"a}chen f{\"u}r dynamische serverseitige Anwendungen verschiedener Gr{\"o}{\ss}enordnungen; andere Endger{\"a}te wie Mobiltelefone verwenden nicht selten die selben HTTP-Schnittstellen. Um die Kosten f{\"u}r Serverhardware zu reduzieren, gibt es verschiedene Ans{\"a}tze, die die Anzahl der gleichzeitigen Operationen zu maximieren versuchen. Dies kann geschehen, indem von dem klassischen Ein-Thread-Pro-Request-Modell zu ausgefeilteren Varianten der Parallelit{\"a}t gewechselt wird. Diese Arbeit pr{\"a}sentiert und vergleicht mehrere Ans{\"a}tze der serverseitigen Nichtsequentialit{\"a}t aus der Sicht eines Entwicklers. Typische Anwendungsf{\"a}lle f{\"u}r serverseitigen Informationsfluss werden aufgezeigt und mit Hinblick auf asynchrone Operationen ausgewertet. Die Ans{\"a}tze werden anschlie{\ss}end basierend auf ihrer Leistung in skalierbaren Hochleistungsnetzwerksystemen und anhand von Beispielen realer und experimenteller Anwendungen betrachtet.
