--- a/10_introduction.tex
+++ b/10_introduction.tex
@@ -1,17 +1,24 @@
 \chapter{Introduction}
-No other recent technology has changed the way people interact as much as the World Wide Web has. The World Wide Web -- or Web, for short -- has a wide range of functionality, from simple content viewing to messaging to social networks. The popularity of the Web has spread from appealing solely to first-world businesses and younger people to almost all demographic and geographic sections. Instead of merely ``browsing'' the Web on an individual basis, today's Web is characterised by communication and collaborative consumption and creation of various digital content. Devices for Web access are no longer limited to personal computers, but include a variety of categories such as mobile phones and wearable computing and even more ubiquitous forms of computing like colour-changing lightbulbs. Frequently, completely new uses for the Web are discovered, often redefining existing beliefs and setting new trends. Amidst all these varying factors, one factor remains constant: Every Web-connected device is bound to communicate with a Web server in one way or the other.
+No other recent technology has changed the way people interact as much as the World Wide Web. The World Wide Web -- or Web, for short -- offers a wide range of functionality, from simply displaying static content to instant messaging to extensive social networks. The popularity of the Web has spread from appealing solely to first-world businesses and younger people to almost all demographic and geographic sections. Instead of merely ``browsing'' the Web on an individual basis, today's Web is characterised by communication and collaborative consumption and creation of different forms of digital content. Devices for Web access are no longer limited to personal computers, but include a variety of categories such as mobile phones and wearable computing and even more ubiquitous forms of computing like colour-changing lightbulbs. Frequently, completely new uses for the Web are discovered, often redefining existing beliefs and setting new trends. Amidst all these varying factors, one factor remains constant -- every Web-connected device is bound to communicate with a Web server.
 
 \section{Motivation}
-Web servers play the central part in Web communication. They started out as simple machines delivering static files to a limited number of clients. In just two decades, requirements for Web servers have changed completely. The popular social network \textit{Twitter}\footnote{\url{http://twitter.com}} handles more than 100000 requests per second on a regular basis -- this includes not only static files, but also complex computations and database operations. With the Web becoming ever more volatile and dynamic, fast and reliable server systems are a necessity. Large sites and services tend to use highly specialised servers and proprietary software to handle the growing demand. However, due to the openness of the Web, it is also possible to create Web services using openly available technologies and standard server systems. With both approaches, as in all economic situations, it is favourable to use a solution that is cost-effective while yielding high performance.
+Web servers play a central part in Web communication. They started out as simple machines delivering static files to a limited number of clients. In just two decades, requirements for Web servers have changed drastically. With the Web becoming ever more volatile and dynamic, fast and reliable server systems are a necessity. Large sites and services tend to use highly specialised servers and proprietary software to handle the growing demand. For instance, the popular social network \textit{Twitter}\footnote{\url{http://twitter.com}} handles more than 100000 requests per second on a regular basis -- this includes not only static files, but also complex computations and database operations. However, due to the openness of the Web, it is also possible to create Web services using openly available technologies and standard computer systems. With both approaches, it is favourable to use solutions that are cost-effective while maintaining high performance. While it is definitely reasonable to invest in modern hardware, well-developed, economic server software can yield formidable results even while saving on hardware cost.
 
-However, many proven patterns of software development do not apply to situations in which a high number of independent operations has to be handled simultaneously, like when processing many Web requests at once. Such highly \textit{concurrent} operations often require alternative execution concepts and paradigms to be handled more efficiently, or -- when the request load is exceptionally high -- to be handled at all.
+However, many proven patterns of software development do not apply to application setups in which a high number of independent operations -- like Web requests -- has to be handled simultaneously. Such highly \textit{concurrent} operations often require alternative execution concepts and paradigms to be handled more efficiently, or -- when the request load is exceptionally high -- to be handled at all.
 
 \section{Objective}
-Currently, two similar alternatives to traditional programming paradigms are used by the industry to increase Web server performance and efficiency: Event- and actor-driven paradigms. This thesis aims to give an overview of these technologies by pointing out their characteristics differences and comparing their approaches. Furthermore, current technologies that implement the said paradigms are listed and reviewed in terms of usability and performance in order to analyse the current state of the art. The main goal, however, is to give a clear and educated statement about how and how much event- and actor-based paradigms can increase Web server performance and efficiency and how and to which extend the according technologies can be applied currently from the view of a developer. 
+Currently, two similar alternatives to traditional programming paradigms are used by the industry to increase Web server performance and efficiency: Event- and actor-driven paradigms. This thesis aims to give an overview of these technologies by pointing out their characteristic differences and comparing their approaches. Furthermore, current technologies that already implement these paradigms are listed and reviewed in terms of usability and performance in order to analyse the current state of the art. The main goal, however, is to give a clear and educated statement about how and how much event- and actor-based paradigms can increase Web server performance and efficiency and how and to which extent the according technologies can be applied currently from the view of a developer. 
 
-On the other hand, this thesis does not try to define a paradigm that fits all general programming needs. It rather tries to find and isolate specific use-cases for certain paradigms with a strong focus on Web server development.
+On the other hand, this thesis does not try to define one universal paradigm that fits all general programming needs. It rather tries to find and isolate specific use-cases for certain paradigms with a strong focus on Web server development; focus lies mainly on comprehensible and well-documented technologies that can currently be used by developers without extensive prior knowledge of the subject.
 
 \section{Structure}
-This thesis can be divided in two main sections: Chapter \ref{lab:technical} and \ref{lab:sota} consist mainly of research based on existing work, while chapter \ref{sec:impl} and \ref{lab:eval} contain almost solely original research and evaluations.
+This thesis is divided in two distinct parts: Chapter \ref{lab:technical} and \ref{lab:sota} consist mainly of definitions and research based on existing work, while chapter \ref{sec:impl} and \ref{lab:eval} almost exclusively contain original research and evaluations.
 
-At the beginning, chapter \ref{lab:technical} defines terms, definitions and criteria that are used without further explanation during the remainder of the thesis. Additionally, this chapter provides in-depth explanations of how essential concurrency models are structured and how they use system resources. Chapter \ref{lab:sota} features an overview of the current options when choosing a event- or actor-based technology for use with a Web server. For both event- and actor-based paradigms one solution is reviewed more thoroughly, another solution is portrayed as an alternative and other solutions are listed briefly. After that, chapter \ref{sec:impl} documents a live project realised with actor-based technologies and goes into detail about how different technologies were used in production settings in order to test the applicability of alternative paradigms. Lastly, chapter \ref{lab:eval} contains a performance evaluation of a traditional application and an actor-driven application with the goal of defining use-cases in which the respective technologies provide the better solution.
+At the beginning, chapter \ref{lab:technical} defines terms, definitions and criteria that are used without further explanation during the remainder of the thesis. Additionally, this chapter provides in-depth explanations of how essential concurrency models are structured and how they utilise system resources. Chapter \ref{lab:sota} features a selection of existing event- or actor-based technologies for use with a Web server. For both event- and actor-based paradigms one solution is reviewed more thoroughly, while another solution is portrayed as an alternative and other solutions are listed briefly. After that, chapter \ref{sec:impl} documents a live project realised with alternative technologies and elaborates how different technologies were used in order to test and review the applicability of alternative paradigms. Lastly, chapter \ref{lab:eval} contains a performance evaluation of a traditional application and an actor-driven application in order to define and attest use-cases in which the respective technologies provide better solutions.
+
+
+
+
+
+
+
