--- a/hgb.sty
+++ b/hgb.sty
@@ -1,6 +1,6 @@
 %% hgb.sty
 %% Autor: Wilhelm Burger (wilhelm.burger@fh-hagenberg.at)
-%% Diese Datei ist Teil des hagenberg-Package zur Erstellung von 
+%% Diese Datei ist Teil des hagenberg-Package zur Erstellung von
 %% Bachelor- und Diplomarbeiten.
 
 \NeedsTeXFormat{LaTeX2e}
@@ -22,7 +22,7 @@
 % \savesymbol{XXX}, which renames a symbol from \XXX to \origXXX, and    %
 % \restoresymbol{yyy}{XXX}, which renames \origXXX back to \XXX and     %
 % defines a new command, \yyyXXX, which corresponds to the most recently %
-% loaded version of \XXX.   
+% loaded version of \XXX.
 % Wilbur: modified to use "orig@" instead of "orig" (not visible to users)
 
 % Save a symbol that we know is going to get redefined.
@@ -47,9 +47,9 @@
 
 %% ------------------ Required Packages ----------------------
 
-\RequirePackage[latin1]{inputenc} 
+\RequirePackage[latin1]{inputenc}
 % T1-Fonts zur besseren Silbentrennung bei Umlauten etc.,
-% verwendet automatisch die cm-super Type1 Postscript Schriften 
+% verwendet automatisch die cm-super Type1 Postscript Schriften
 % (in MikTeX ab 2.4 installiert):
 \RequirePackage[T1]{fontenc}
 
@@ -72,7 +72,7 @@
 	{\main@language{ngerman}}{}
 \ifthenelse{\equal{\hgb@MainLanguage}{english}}%
 	{\main@language{english}}{}
-	
+
 %\RequirePackage[fixlanguage]{babelbib} %removed for biblatex
 
 \RequirePackage[dvips]{graphicx} % zur Einbindung von EPS-Grafiken
@@ -84,7 +84,7 @@
 \RequirePackage{moreverb}
 \def\verbatimtabsize{2\relax}
 
-%\RequirePackage[noadjust]{cite} % vermeidet zusätzliches Spacing vor [..]
+%\RequirePackage[noadjust]{cite} % vermeidet zusï¿½tzliches Spacing vor [..]
 
 \RequirePackage{float}
 %\floatplacement{figure}{tbp}
@@ -101,9 +101,9 @@
 %\RequirePackage[small,rm,loose]{subfigure}
 %\setlength{\subfigtopskip}{7pt}
 %\setlength{\subfigcapskip}{7pt}
-%\setlength{\subfigcaptopadj}{0pt} 
+%\setlength{\subfigcaptopadj}{0pt}
 %\setlength{\subfigbottomskip}{-3pt}
-%\setlength{\subfigcapmargin}{0pt} 
+%\setlength{\subfigcapmargin}{0pt}
 %\setlength{\subfiglabelskip}{0.33em plus 0.07em minus 0.03em}
 
 \RequirePackage{exscale}
@@ -114,7 +114,7 @@
 
 \RequirePackage{psfrag}
 
-% AMS-Math für mathematischen Schriftsatz
+% AMS-Math fï¿½r mathematischen Schriftsatz
 \RequirePackage{amsmath}
 \RequirePackage{amsfonts}
 \RequirePackage{amsbsy}
@@ -164,8 +164,8 @@
 %  \nopagebreak[4]
   \noindent\makebox[\textwidth]{\rule{4cm}{0.4pt}}
   \vskip 2.5ex}
-  
-%Div. Abkürzungen (in Anlehnung an Jochen Küpper, jkthesis):
+
+%Div. Abkï¿½rzungen (in Anlehnung an Jochen Kï¿½pper, jkthesis):
 %\usepackage{xspace}
 \RequirePackage{xspace}
 
@@ -183,7 +183,7 @@
 
 \newcommand{\ua}{u.\thinspace{}a.\@\xspace}
 \newcommand{\Ua}{U.\thinspace{}a.\@\xspace}
-\newcommand{\uae}{u.\thinspace{}Ä.\@\xspace}
+\newcommand{\uae}{u.\thinspace{}ï¿½.\@\xspace}
 \newcommand{\usw}{usw.\@\xspace}
 \newcommand{\uva}{u.\thinspace{}v.\thinspace{}a.\@\xspace}
 \newcommand{\uvm}{u.\thinspace{}v.\thinspace{}m.\@\xspace}
@@ -208,8 +208,8 @@
 \linethickness{0.05mm}%
 \put(0,0){\dashbox{0.2}(#1,#2)%
 {\parbox{#1mm}{%
-\centering\footnotesize 
-%{\bf MESSBOX}\\ 
+\centering\footnotesize
+%{\bf MESSBOX}\\
 Breite $ = #1 {\rm\ mm}$\\
 H\"ohe $ = #2 {\rm\ mm}$
 }}}\end{picture}
@@ -217,11 +217,11 @@ H\"ohe $ = #2 {\rm\ mm}$
 
 %% ------------- Einstellungen fuer's Layout --------------
 
-%\nonfrenchspacing    % erzeugt breitere Abstände zwischen Sätzen
-\frenchspacing     	  % erzeugt normale Abstände zwischen Sätzen
+%\nonfrenchspacing    % erzeugt breitere Abstï¿½nde zwischen Sï¿½tzen
+\frenchspacing     	  % erzeugt normale Abstï¿½nde zwischen Sï¿½tzen
 %\pagestyle{headings}  % Normale Kopfzeilen
 
-%% div. Parameter: nur dann ändern, wenn man genau weiss was man tut!
+%% div. Parameter: nur dann ï¿½ndern, wenn man genau weiss was man tut!
 %\setlength{\hoffset}{-1in}
 %\setlength{\voffset}{-1in}
 %\setlength{\oddsidemargin}{3cm}
@@ -234,7 +234,7 @@ H\"ohe $ = #2 {\rm\ mm}$
 %\parindent0pt
 %\parskip1.5ex plus0.5ex minus0.5ex % flexibler Absatzabstand
 
-% Make float placement easier    
+% Make float placement easier
 \renewcommand{\floatpagefraction}{.9}  % vorher: .5
 \renewcommand{\textfraction}{.01}      % vorher: .2
 \renewcommand{\topfraction}{.9}        % vorher: .7
@@ -245,21 +245,21 @@ H\"ohe $ = #2 {\rm\ mm}$
 
 %% ------------- Math Stuff --------------
 %% Problem mit Satzzeichen im Math-Modus!
-%% Verwende Komma (statt Punkt) als Trennzeichen in Dezimalzahlen 
+%% Verwende Komma (statt Punkt) als Trennzeichen in Dezimalzahlen
 %\DeclareMathSymbol{,}{\mathpunct}{letters}{"3B}
 %\DeclareMathSymbol{.}{\mathord}{letters}{"3B}
 %\DeclareMathSymbol{\decimal}{\mathord}{letters}{"3A}
 
 %% ------------- Algorithms Stuff ---------
 
-% 'algorithm' liefert die Float-Umgebung für Algorithmen (\begin{algorithm}...)
+% 'algorithm' liefert die Float-Umgebung fï¿½r Algorithmen (\begin{algorithm}...)
 \@ifundefined{chapter}%
   {\RequirePackage[ruled]{algorithm}}%
 	{\RequirePackage[ruled,chapter]{algorithm}}
 
 %\floatname{algorithm}{Algorithmus}
 %\DeclareCaptionLabelSeparator{colon}{: } % Anpassung an den standard caption style
-\DeclareCaptionStyle{ruled}{labelfont=bf,labelsep=colon} 
+\DeclareCaptionStyle{ruled}{labelfont=bf,labelsep=colon}
 
 % 'algorithmicx' liefert das Innere der Algorithmen (\begin{algorithmic}[1]...)
 \RequirePackage{algorithmicx}
@@ -279,7 +279,7 @@ H\"ohe $ = #2 {\rm\ mm}$
 %\floatname{program}{\@ProgramName}
 \floatstyle{plain}
 \restylefloat*{program}
-	
+
 \ifthenelse{\equal{\bbl@main@language}{german} \or \equal{\bbl@main@language}{ngerman}}%
 {	\floatname{program}{Programm}
   \floatname{algorithm}{Algorithmus}
@@ -306,7 +306,7 @@ identifierstyle=,%\sffamily, %\bfseries
 commentstyle=\normalfont\itshape,%
 stringstyle=\ttfamily,%
 showstringspaces=false,%
-columns = flexible,% fixed, 
+columns = flexible,% fixed,
 breaklines=true,%
 tabsize=2, %
 backgroundcolor=\color{lightgray},
@@ -325,7 +325,7 @@ upquote=true,%
 keepspaces=true,%
 }
 
-\lstnewenvironment{JavaCode}	% code environment for Java 
+\lstnewenvironment{JavaCode}	% code environment for Java
 {\lstset{%
 	language=Java,%
 	escapeinside={/+}{+/},% makes "/+" and "+/" available for Latex escapes (labels etc.)
@@ -393,7 +393,7 @@ keepspaces=true,%
 {\end{list}}
 
 \newenvironment{FileList}[1]%
-{\paragraph{Pfad:} \url{#1}
+{\paragraph{Path:} \url{#1}
  \begin{list}{}%
 {\setlength{\leftmargin}{5cm}
  \setlength{\labelwidth}{4cm}
@@ -429,9 +429,9 @@ keepspaces=true,%
 
 \newcommand{\optbreaknh}{\hskip 0pt } %optional break without hyphen: e.g. PlugIn{\optbrknh}Filter
 
-% Erzeugt einen neuen, nicht eingerückten Absatz
-% mit zusätzlichem Abstand:
-\newcommand{\SuperPar}[0]{% 
+% Erzeugt einen neuen, nicht eingerï¿½ckten Absatz
+% mit zusï¿½tzlichem Abstand:
+\newcommand{\SuperPar}[0]{%
 \par\bigskip\noindent%
 }
 
@@ -462,26 +462,26 @@ keepspaces=true,%
 \RequirePackage{hyperref}		% ignores \pdfinfo commmands
 \RequirePackage[all]{hypcap} % fixes hyperref problem with references to float captions
 %\RequirePackage[novbox]{pdfsync} % ersetzt durch -synctex=-1 option
-%\RequirePackage[noadjust]{cite} % vermeidet zusätzliches Spacing vor [..] % entfernt wegen biblatex
+%\RequirePackage[noadjust]{cite} % vermeidet zusï¿½tzliches Spacing vor [..] % entfernt wegen biblatex
 
 \RequirePackage{ifpdf}
-\ifpdf % LaTeX is in native PDF mode (pdflatex) 
-  \RequirePackage{epstopdf}		% zur automatischen Konvertierung von EPS-Dateien nach PDF für pdflatex
+\ifpdf % LaTeX is in native PDF mode (pdflatex)
+  \RequirePackage{epstopdf}		% zur automatischen Konvertierung von EPS-Dateien nach PDF fï¿½r pdflatex
 %  \pdfcompresslevel=0			  % 0 = keine Kompression, 9 = max. Kompression
 %  \pdfimageresolution=300
 \else % LaTeX is in emulation mode (DVI-PS-PDF)
   \RequirePackage[hyphenbreaks]{breakurl}	% erlaubt Zeilenumbruch von URLs auch ohne pdflatex (DIV, PS, PDF)
-\fi	
-	
+\fi
+
 \RequirePackage{enumitem}	% fix excessive vertical spacing in lists
 \setlist{%
-	partopsep = .0ex plus .1ex, 
-	topsep = .6ex plus .3ex, 
-	itemsep = .0ex plus .1ex, 
+	partopsep = .0ex plus .1ex,
+	topsep = .6ex plus .3ex,
+	itemsep = .0ex plus .1ex,
 	parsep = .4ex plus .2ex
 }
 %\setlist{nolistsep}	% kein Spacing zwischen items
-%\setlist{noitemsep}  % überhaupt kein vertik. Spacing
+%\setlist{noitemsep}  % ï¿½berhaupt kein vertik. Spacing
 
 %% -------------------------------------------------------
 
@@ -508,4 +508,3 @@ keepspaces=true,%
 \raggedbottom
 
 %% -------------------------------------------------------
-
