--- a/01_kurzfassung.tex
+++ b/01_kurzfassung.tex
@@ -1,2 +1,5 @@
 \chapter{Kurzfassung}
-Im Laufe der letzten Jahre haben sich Websites ver{\"a}ndert: Fr{\"u}her dienten sie lediglich zur Anzeige von Inhalten, nun verk{\"o}rpern sie Benutzeroberfl{\"a}chen f{\"u}r dynamische serverseitige Anwendungen verschiedener Gr{\"o}{\ss}enordnungen; andere Endger{\"a}te wie Mobiltelefone verwenden nicht selten die selben HTTP-Schnittstellen. Um die Kosten f{\"u}r Serverhardware zu reduzieren, gibt es verschiedene Ans{\"a}tze, die die Anzahl der gleichzeitigen Operationen zu maximieren versuchen. Dies kann geschehen, indem von dem klassischen Ein-Thread-Pro-Request-Modell zu ausgefeilteren Varianten der Parallelit{\"a}t gewechselt wird. Diese Arbeit pr{\"a}sentiert und vergleicht mehrere Ans{\"a}tze der serverseitigen Nichtsequentialit{\"a}t aus der Sicht eines Entwicklers. Typische Anwendungsf{\"a}lle f{\"u}r serverseitigen Informationsfluss werden aufgezeigt und mit Hinblick auf asynchrone Operationen ausgewertet. Die Ans{\"a}tze werden anschlie{\ss}end basierend auf ihrer Leistung in skalierbaren Hochleistungsnetzwerksystemen und anhand von Beispielen realer und experimenteller Anwendungen betrachtet.
+
+Die immer weiter steigende Popularit{\"a}t von Websites und mobilen Applikationen f{\"u}hrt zu stetig wachsenden Anforderungen an Webserver. Gut durchdachte Software kann Hardwarekosten eind{\"a}mmen und gleichzeitig die Leistung steigern. Event- und Actor-basierte Entwicklung weicht von bestehenden L{\"o}sungen ab, um bessere Ergebnisse f{\"u}r moderne Webserveranwendungen zu erzielen. Verschiedene Technologien implementieren bereits jetzt unterschiedliche Ans{\"a}tze dieser Entwicklungsweisen. Diese Arbeit versucht herauszufinden, wie, in welchem Ausma{\ss} und unter welchen Bedingungen diese Technologien die Leistung von Webservern steigern k{\"o}nnen.
+
+%Im Laufe der letzten Jahre haben sich Websites ver{\"a}ndert: Fr{\"u}her dienten sie lediglich zur Anzeige von Inhalten, nun verk{\"o}rpern sie Benutzeroberfl{\"a}chen f{\"u}r dynamische serverseitige Anwendungen verschiedener Gr{\"o}{\ss}enordnungen; andere Endger{\"a}te wie Mobiltelefone verwenden nicht selten die selben HTTP-Schnittstellen. Um die Kosten f{\"u}r Serverhardware zu reduzieren, gibt es verschiedene Ans{\"a}tze, die die Anzahl der gleichzeitigen Operationen zu maximieren versuchen. Dies kann geschehen, indem von dem klassischen Ein-Thread-Pro-Request-Modell zu ausgefeilteren Varianten der Parallelit{\"a}t gewechselt wird. Diese Arbeit pr{\"a}sentiert und vergleicht mehrere Ans{\"a}tze der serverseitigen Nichtsequentialit{\"a}t aus der Sicht eines Entwicklers. Typische Anwendungsf{\"a}lle f{\"u}r serverseitigen Informationsfluss werden aufgezeigt und mit Hinblick auf asynchrone Operationen ausgewertet. Die Ans{\"a}tze werden anschlie{\ss}end basierend auf ihrer Leistung in skalierbaren Hochleistungsnetzwerksystemen und anhand von Beispielen realer und experimenteller Anwendungen betrachtet.
