--- a/20_technical.tex
+++ b/20_technical.tex
@@ -168,7 +168,7 @@ A non-blocking scenario in a Web application. When request one (shown in dark gr
   \includegraphics[width=.70\textwidth]{events_scale2} \\
   (b)
 \end{tabular}
-\caption{Typical scaling behaviours of a purely thread-based application and an event-based application. This example is taken from an experiment by D. Carrera et al. \cite{Carrera}. The graphs show the effect of an increasing number of clients (x-axis) on the request throughput (y-axis) using a standard \textit{httdp 2.0} Web server -- shown in (a) -- and using \textit{Java}'s event-based \textit{NIO} interface -- shown in (b). References: \textit{Apache httpd} (\url{http://httpd.apache.org/}), \textit{Java NIO} (\url{http://www.oracle.com/}). Image source: \cite{Carrera}.} 
+\caption{Typical scaling behaviours of a purely thread-based application and an event-based application. This example is taken from an experiment by D. Carrera et al. \cite{Carrera}. The graphs show the effect of an increasing number of clients (x-axis) on the request throughput (y-axis) using a standard \textit{Apache httdp 2.0} Web server -- shown in (a) -- and using \textit{Java}'s event-based \textit{NIO} interface -- shown in (b). Image source: \cite{Carrera}} 
 \label{fig:events_scale}
 \end{figure}
  
