--- a/30_stateoftheart.tex
+++ b/30_stateoftheart.tex
@@ -127,7 +127,7 @@ if (cluster.isMaster) {
 \setlength{\tabcolsep}{0mm}
   \includegraphics[width=.80\textwidth]{node_performance}
 \caption{
-In this figure taken from a performance analysis of D. Torstensson and E. Eloff, requests are sent to a \textit{Node.js} server with different payload sizes. The requests are sent both with and without authentication; authentication is done by hashing (i.e. processing) the whole payload using the \textit{SHA1-HMAC} algorithm. Larger payloads are more computationally intensive and result in a longer response time. Image source: \cite{Torstensson2012}
+In this figure taken from a performance analysis of D. Torstensson and E. Eloff, requests are sent to a \textit{Node.js} server with different payload sizes. The requests are sent both with and without authentication; authentication is done by hashing (i.e. processing) the whole payload using the \textit{SHA1-HMAC} algorithm. Larger payloads are more computationally intensive and result in a longer response time. Image source: \cite{Torstensson2012}.
 }
 \label{fig:node_performance}
 \end{figure}
@@ -192,7 +192,7 @@ Like \textit{JavaScript}, \textit{Ruby} is an interpreted scripting language and
 \setlength{\tabcolsep}{0mm}
   \includegraphics[width=.80\textwidth]{ruby-gil}
 \caption{
-The \textit{Global Interpreter Lock} of the \textit{Ruby} VM prevents application logic to control parallel program execution on OS threads because it executes only one \textit{Ruby} thread at once. However, with \textit{JRuby}, this is possible. Image source: \cite{ruby-gil}}
+The \textit{Global Interpreter Lock} of the \textit{Ruby} VM prevents application logic to control parallel program execution on OS threads because it executes only one \textit{Ruby} thread at once. However, with \textit{JRuby}, this is possible. Image source: \cite{ruby-gil}.}
 \label{fig:gil}
 \end{figure}
 
