--- a/_thesis-2014.tex
+++ b/_thesis-2014.tex
@@ -9,7 +9,7 @@
 
 \begin{document}
 
-\title{Using Event- and Actor-driven Paradigms to Increase Web Server Performance}
+\title{Using Event- and Actor-driven Paradigms to Increase Web Application Performance}
 
 \author{Felix Hessenberger}
 \studiengang{Interactive Media}
